--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "meudeus",
-    "slug": "meudeus",
+    "name": "UI-Nubank",
+    "slug": "UI-Nubank",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
